--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "node node_modules/eslint/bin/eslint src/"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.0.0",
     "webpack": "^1.13.1"
   },
