--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "lodash.throttle": "^4.1.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react": "^15.3.0"
   }
 }
