--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "lint": "node node_modules/eslint/bin/eslint src/"
+    "lint": "node node_modules/eslint/bin/eslint src/",
+    "mocha": "node node_modules/mocha/bin/mocha --compilers js:babel-core/register --require jsdomSetup.js --recursive test/"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,18 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.0.0",
+    "jsdom": "^9.4.2",
+    "karma": "^1.2.0",
+    "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.3.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
