--- a/package.json
+++ b/package.json
@@ -31,27 +31,28 @@
   "homepage": "https://github.com/sniphpet/react-on-screen#readme",
   "devDependencies": {
     "babel-cli": "^6.11.4",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.0.0",
     "jsdom": "^9.4.2",
     "karma": "^1.2.0",
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
-    "sinon": "^1.17.5",
-    "webpack": "^1.13.1",
-    "babel-loader": "^6.2.4"
+    "sinon": "^2.1.0",
+    "webpack": "^2.4.1"
   },
   "dependencies": {
-    "lodash.throttle": "^4.1.0",
-    "react": "^15.3.0"
+    "lodash.throttle": "^4.1.1",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4"
   }
 }
