--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pretest": "npm run lint",
     "test": "mocha --compilers js:babel-core/register --require jsdomSetup.js --recursive test/",
     "prebuild": "npm run test",
-    "build": "./scripts/build.sh"
+    "build": "NODE_ENV=production ./scripts/build.sh",
+    "build-dev": "NODE_ENV=developement ./scripts/build.sh"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
