--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,3 @@
 {
-  "settings": {
-    "react": {
-      "pragma": "React",  // Pragma to use, default to "React"
-      "version": "15.0" // React version, default to the latest React stable release
-    }
-  },
-  "extends": [
-    "eslint:recommended",
-    "airbnb"
-  ],
-  "parserOptions":{
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
-    }
-  },
-  "rules": {
-    "max-len": [1, 120, 2, {"ignoreComments": true}],
-    "quote-props": [1, "consistent-as-needed"],
-    "no-cond-assign": [2, "except-parens"],
-    "space-infix-ops": 0,
-    "no-unused-vars": [1, {"vars": "local", "args": "none"}],
-    "no-else-return": 0,
-    "arrow-parens": 0,
-    "no-param-reassign": 0,
-    "quotes": 0,
-    "comma-dangle": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true  }],
-    "consistent-return": ["warn"]
-  }
+  "extends": "react-app"
 }
