--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "lint": "eslint src/",
     "pretest": "npm run lint",
-    "test": "jest --coverage",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "prebuild": "npm run test",
     "build": "NODE_ENV=production ./scripts/build.sh",
     "build-dev": "NODE_ENV=developement ./scripts/build.sh"
@@ -59,7 +60,6 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
-    "jsdom": "^9.4.2",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
