--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "dependencies": {
     "lodash.throttle": "^4.1.1",
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "shallowequal": "^1.0.2"
   },
   "peerDependencies": {
     "react": ">=15.0.0",
