--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "main": "lib/index.js",
   "typings": "./index.d.ts",
   "scripts": {
+    "test": "cross-env NODE_ENV=test jest",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint src/",
-    "pretest": "npm run lint",
-    "test": "jest",
-    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "lint:fix": "eslint --fix src/",
+    "prettier-all": "prettier --single-quote --write 'src/**/*.js'",
     "prebuild": "npm run test",
-    "build": "NODE_ENV=production ./scripts/build.sh",
-    "build-dev": "NODE_ENV=developement ./scripts/build.sh"
+    "build": "npm run build:es && npm run build:umd",
+    "build:es": "npm run clean:es && cross-env NODE_ENV=production babel --ignore=src/__tests__ src -d lib",
+    "build:umd": "npm run clean:umd && cross-env NODE_ENV=production webpack",
+    "clean:es": "rimraf lib/*",
+    "clean:umd": "rimraf dist/*"
   },
   "repository": {
     "type": "git",
@@ -43,14 +47,21 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.0.18",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react-app": "^3.0.3",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.4.18",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "coveralls": "^3.0.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.1.4",
@@ -62,12 +73,16 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
+    "prettier": "^1.14.3",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
+    "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
-    "webpack": "^3.8.1"
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "lodash.throttle": "^4.1.1",
