--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "lib/index.js",
   "typings": "./index.d.ts",
   "scripts": {
+    "start": "webpack-dev-server --config ./webpack.config.dev.js",
     "test": "cross-env NODE_ENV=test jest",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint src/",
@@ -62,6 +63,7 @@
     "babel-loader": "^8.0.4",
     "coveralls": "^3.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.1.4",
@@ -71,6 +73,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
     "prettier": "^1.14.3",
@@ -80,6 +83,7 @@
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
